--- a/Src/Public/style.css
+++ b/Src/Public/style.css
@@ -5,9 +5,50 @@ body, html {
   font-family: sans-serif;
 }
 
-h1, label, input {
+h1 {
   text-align: center;
   margin: auto;
   padding-top: 1em;
 }
 
+input {
+  background-color: transparent;
+  border-color: transparent;
+  border-bottom-color: black;
+  color: rgb(22, 59, 221);
+  cursor: pointer;
+}
+
+.header {
+  background-color: rgb(196, 24, 24);
+}
+
+.preview {
+  width: 50%;
+  float: left;
+}
+
+.form {
+  width: 50%;
+  float: left;
+  background-color: lightslategray;
+}
+
+button {
+  margin-left: 64px;
+  padding: 15px 32px;
+  color: white;
+  border: none;
+  background-color: limegreen;
+  display: inline-block;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+.right_preview {
+  float: right;
+  margin-top: 35px;
+  margin-right: 80px;
+}
